Move to Java 21